initialization script to download zeppelin release